src/styles.scss
/* ... */
.moduleList .mat-tab-label-active .affordableHousing {background:url('assets/icons/affordable-housing-h.svg') !important;}
// End Icons ----------------------------------

.capitalCase {
    text-transform: uppercase;
}

.mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label,
.ng-select .ng-has-value .ng-placeholder, .ng-select.ng-select-opened .ng-placeholder,
.mat-form-field-appearance-legacy .mat-form-field-label,
.ng-select.ng-select-disabled .ng-select-container .ng-value-container .ng-placeholder,
.mat-radio-button.mat-radio-disabled .mat-radio-label-content{
    color: #292828 !important;
}

.ng-select .ng-has-value .ng-placeholder, .ng-select.ng-select-opened .ng-placeholder,
.ng-select .ng-select-container .ng-value-container .ng-placeholder{
     color: #292828 !important;
}

.mat-form-field-invalid .mat-icon, 
.mat-form-field-invalid .mat-datepicker-toggle-default-icon,
.mat-form-field.mat-form-field-invalid .mat-form-field-label,
.ng-select.ng-invalid.ng-touched .ng-placeholder, .ng-select.ng-invalid.ng-touched .ng-arrow-wrapper .ng-arrow {
    color: #f44336 !important;
}
@media print {
    .zooServicesList{ display: none;}
   }

 .createMarriageReg .mat-tab-label{
    width: 200px;
}   

@-moz-document url-prefix() {
    .stepperNav .mat-tab-label{
        font-size: 14px;
    }
}
.ngSelectPlaceholder .ng-placeholder{top:15px;}


.noDigit {
  .mat-input-element {padding-left: 28px !important;}
  .mat-form-field-label-wrapper {left: 28px;
    -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -ms-transition: all 0.2s linear; transition: all 0.2s linear;}
  &.mat-form-field-should-float {
    .mat-form-field-label-wrapper {left: 0;}
  }
  .mat-form-field-prefix {position: absolute; top: 17px; left: 0;}
}

 .stepperToTab {
  &{border: 1px solid #e1e1e1; border-radius: 5px;}
  .mat-horizontal-content-container {padding: 0;}
  .mat-horizontal-stepper-header-container {margin-bottom: 0; background: #f1f1f1; border: 0;}
  .mat-horizontal-stepper-header {
    height: 45px !important;}
  .mat-step-icon, .mat-step-icon-not-touched {display: none;}
  .mat-stepper-horizontal-line {border-top-width:0}
  .mat-step-label.mat-step-label-active {color: #666;}
  .mat-step-label.mat-step-label-active.mat-step-label-selected {color: #673ab7;}
  .mat-step-label-active.mat-step-label-selected::after {height: 2px; }

}
// Select Tag
.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {  margin-bottom: 0 !important;  padding: 1px 5px !important;}

